# smartish-home

./: .gitignore  pyproject.toml
smartish_home/: __main__.py  climate.py  core.py  room.py  util.py  websocket.py
tests/: test_smartish_home.py
