[tool.poetry]
name = "smartish-home"
version = "0.1.0"
description = ""
authors = ["Mark <mark.hall@work.room3b.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
